# gomza-ss

nnlab_external-master/NNClient/: CMakeLists.txt  README.md  fc.py  test_NNClient_pri.py  test_servers.py
nnlab_external-master/NNClient/Demo/: CMakeLists.txt
nnlab_external-master/NNClient/Demo/HumanPoseEstimation/: CMakeLists.txt  main.cpp  main_simplepose.cpp
nnlab_external-master/NNClient/Demo/HumanPoseEstimation/Caffe2/: CMakeLists.txt  main.cpp
nnlab_external-master/NNClient/Demo/HumanPoseEstimation/Caffe2/include/: human_pose_estimator_mrcnn.hpp
nnlab_external-master/NNClient/Demo/HumanPoseEstimation/Caffe2/src/: human_pose_estimator_mrcnn.cpp
nnlab_external-master/NNClient/Demo/HumanPoseEstimation/include/: human_pose_estimator.hpp  human_pose_estimator_simplepose.hpp  render_human_pose.hpp
nnlab_external-master/NNClient/Demo/HumanPoseEstimation/src/: human_pose_estimator_simplepose.cpp  peak.cpp  render_human_pose.cpp
nnlab_external-master/NNClient/Demo/NMResource/: NMResource.h
nnlab_external-master/NNClient/Demo/include/: Crush.h  DeviceDemo.h  InitLog4cxx.h  NNClientDemo.h
nnlab_external-master/NNClient/Demo/include/OutputRepresenters/: Chars.h  Classification.h  ClassifiedDetections.h  Detections.h  Keypoints.h  MMROutput.h  OutputRepresenterRegistry.h  SemSeg.h  Tracks.h  TracksKeypoints.h  TracksWithAlarmsAndHelmetBoxes.h  TruckDetection.h
nnlab_external-master/NNClient/Demo/src/: Crush.cpp  DeviceDemo.cpp  InitLog4cxx.cpp  NNClient.LoggerSetts.txt  NNClientDemo.cpp
nnlab_external-master/NNClient/Demo/src/OutputRepresenters/: OutputRepresenterRegistry.cpp
nnlab_external-master/NNClient/NNClient/: NNClient.pri
nnlab_external-master/NNClient/NNClient/NNClient/: NNClient.cpp  NNClient.h
nnlab_external-master/NNClient/NNClient/NNClient/core/: CommandBack.cpp  CommandBack.h  CommandFront.cpp  CommandFront.h  CommandProcessorBack.cpp  CommandProcessorBack.h  CommandProcessorFront.cpp  CommandProcessorFront.h  CommandWithParams.cpp  CommandWithParams.h  Config.cpp  Config.h  DeviceContextManager.cpp  DeviceContextManager.h  DeviceFetcher.cpp  DeviceFetcher.h  Macro.h  NNClientLogger.cpp  NNClientLogger.h  NNClientTypes.h  OutputParser.cpp  OutputParser.h  ProcessManager.cpp  ProcessManager.h  Registry.h
nnlab_external-master/NNClient/NNClient/NNClient/json/: json.cpp  json.h
nnlab_external-master/NNClient/NNClient/NNClient/registry/: NNClientRegistries.cpp  NNClientRegistries.h
nnlab_external-master/NNClient/NNClient/NNClient/registry/commands/: Back.h  Front.h
nnlab_external-master/NNClient/NNClient/NNClient/registry/setup/: DeployCommands.cpp  DeployCommands.h  SetupHelper.h  TaskSetuper.cpp  TaskSetuper.h
nnlab_external-master/NNClient/NNClientCMake/: CMakeLists.txt
nnlab_external-master/NNClient/Targets/: CMakeLists.txt
nnlab_external-master/NNClient/Targets/CUDADevices/: CMakeLists.txt  CUDADevices.cpp
nnlab_external-master/NNClient/Targets/DeviceDetect/: CMakeLists.txt  DeviceDetect.cpp
nnlab_external-master/NNClient/Targets/FrameProcessing/: CMakeLists.txt  FrameProcessing.cpp
nnlab_external-master/NNClient/Targets/FrameProcessing/FrameProcessingData/: README.md
nnlab_external-master/NNClient/Targets/FrameProcessing/FrameProcessingData/Caffe2Auto/: demoConfig.json  reference.txt  taskConfig.json
nnlab_external-master/NNClient/Targets/FrameProcessing/FrameProcessingData/Caffe2Belt/: reference.txt  (+2 more)
(+176 files in other folders)
